[gd_scene load_steps=5 format=3 uid="uid://byy5ra0fytq68"]

[ext_resource type="Script" path="res://assets/debug/scripts/debug_action_group.gd" id="1_n7q6l"]
[ext_resource type="LabelSettings" uid="uid://3rkfidxeoaqe" path="res://assets/common/fonts/debug/debug_h1_font.tres" id="2_cj3lt"]
[ext_resource type="LabelSettings" uid="uid://bmxdt10e72a0o" path="res://assets/common/fonts/debug/debug_h2_font.tres" id="3_gpc6q"]
[ext_resource type="PackedScene" uid="uid://baj8jkegepq5f" path="res://assets/debug/scenes/debug_units_input.tscn" id="4_kkcn0"]

[node name="Building" type="MarginContainer"]
offset_top = 226.0
offset_right = 280.0
offset_bottom = 226.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
script = ExtResource("1_n7q6l")

[node name="Container" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2

[node name="BuildingTitle" type="Label" parent="Container"]
layout_mode = 2
label_settings = ExtResource("2_cj3lt")
vertical_alignment = 1

[node name="TitleSeparator" type="HSeparator" parent="Container"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Assigned" type="Label" parent="Container"]
layout_mode = 2
text = "Assigned"
label_settings = ExtResource("3_gpc6q")

[node name="Units" parent="Container" instance=ExtResource("4_kkcn0")]
layout_mode = 2

[node name="Separator" type="Control" parent="Container"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="DiceContainer" type="HFlowContainer" parent="Container"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10

[node name="RollButton" type="Button" parent="Container"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Roll"

[node name="HSeparator" type="HSeparator" parent="Container"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ActionsLabel" type="Label" parent="Container"]
layout_mode = 2
text = "Actions
"
label_settings = ExtResource("3_gpc6q")

[node name="ActionsContainer" type="HFlowContainer" parent="Container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
alignment = 1
